# image-2-webui

./: .gitignore  README.md  pyproject.toml  requirements.txt  webui-user.bat
app/: __init__.py  api_capabilities.json
app/cli/: main.py
app/core/: __init__.py  api_capabilities.py  batch_engine.py  command_builder.py  config.py  connectivity_check.py  cost_estimator.py  errors.py  event_protocol.py  file_scanner.py  image_validator.py  manifest_store.py  models.py  openai_image_client.py  output_planner.py  output_writer.py  profile_store.py  prompt_renderer.py  task_planner.py
app/webui/: __init__.py  gradio_app.py  history.py  job_runner.py  launch.py  presets.py  settings_store.py  sizing.py  state.py
tests/: test_connectivity_check.py  test_dependencies.py  test_errors.py  test_launcher_script.py  test_openai_image_client.py  test_web_job_runner.py  test_webui_localization.py
